# bindb

./: .gitignore  .gitmodules  Cargo.toml  gitignore
src/: lib.rs  ord.rs  proto.rs
